syntax = "proto3";

package api.v1;

option go_package = "github.com/vyrodovalexey/grpc-example/pkg/api/v1;apiv1";

service TestService {
  rpc Unary(UnaryRequest) returns (UnaryResponse);
  rpc ServerStream(StreamRequest) returns (stream StreamResponse);
  rpc BidirectionalStream(stream BidirectionalRequest) returns (stream BidirectionalResponse);
}

message UnaryRequest {
  string message = 1;
}

message UnaryResponse {
  string message = 1;
  int64 timestamp = 2;
}

message StreamRequest {
  int32 count = 1;
  int32 interval_ms = 2;
}

message StreamResponse {
  int64 value = 1;
  int32 sequence = 2;
  int64 timestamp = 3;
}

message BidirectionalRequest {
  int64 value = 1;
  string operation = 2;
}

message BidirectionalResponse {
  int64 original_value = 1;
  int64 transformed_value = 2;
  string operation = 3;
  int64 timestamp = 4;
}
